--- a/themes/vanilla-bootstrap-hugo-theme/layouts/partials/head.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/partials/head.html
@@ -15,8 +15,15 @@
     {{ $style := resources.Get "scss/style.scss" | resources.ToCSS $options  }}
     <link rel="stylesheet" href="{{ ($style | minify | fingerprint).RelPermalink }}">
   {{ end }}
-  <link rel="shortcut icon" type="image/png" sizes="32x32" href="{{"images/faviconx32.png" | relURL}}">
-  <link rel="shortcut icon" type="image/png" sizes="16x16" href="{{"images/favicon.png" | relURL}}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ "images/apple-touch-icon.png" | relURL }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ "images/favicon-32x32.png" | relURL }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ "images/favicon-16x16.png" | relURL }}">
+  <link rel="manifest" href="{{ "images/site.webmanifest" | relURL }}">
+  <link rel="mask-icon" href="{{ "images/safari-pinned-tab.svg" | relURL }}" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#00aba9">
+  <meta name="theme-color" content="#ffffff">
+  <!-- <link rel="shortcut icon" type="image/png" sizes="32x32" href="{{"images/faviconx32.png" | relURL}}">
+  <link rel="shortcut icon" type="image/png" sizes="16x16" href="{{"images/favicon.png" | relURL}}"> -->
   <!-- TODO: Replace with Adobe Caslon Pro -->
   <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Lusitana|Radley" rel="stylesheet">
   <!-- font awesome for social icons in footer -->
