News and events range and pagination

--- a/themes/vanilla-bootstrap-hugo-theme/layouts/index.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/index.html
@@ -3,7 +3,7 @@
 <div id="home-jumbotron" class="jumbotron row" style="">
   <div class="col-md-4 col-intro">
     <img src="{{ "images/header-logo-white.svg" | absURL }}" class="d-inline-block align-top" alt="{{ .Site.Title }} logo" aria-level="1" tabindex="-1">
-    <div class="h2" aria-level="2" tabindex="0">{{ .Page.Params.subtitle }}</div>
+    <div class="h2" aria-level="2" tabindex="0">{{ .Page.Params.description }}</div>
 
   </div>
 </div>
