--- a/themes/vanilla-bootstrap-hugo-theme/layouts/news/list.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/news/list.html
@@ -2,16 +2,55 @@
 
 <h1>{{ .Title }}</h1>
 
-<h2>{{ .Title }}</h2>
-<div class="list-news">
-{{ range where .Pages "Date.Unix" "lt" now.Unix  }}
-<div>
-  <a class="font-125" href="{{ .Permalink }}">{{ .Title }}</a>
-  <span>{{ .Content }}</span>
-  {{ partial "news-date-and-tags.html" . }}
+<ul class="nav nav-tabs" id="myTab" role="tablist">
+  <li class="nav-item">
+    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#news" role="tab" aria-controls="home" aria-selected="true">News</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="profile-tab" data-toggle="" href="{{ "/events/" | absURL }}" role="tab" aria-controls="profile" aria-selected="false">Events</a>
+  </li>
+</ul>
+<div class="tab-content" id="myTabContent">
+  <div class="tab-pane fade show active" id="news" role="tabpanel" aria-labelledby="home-tab">
+    <h2>{{ .Title }}</h2>
+    <div class="list-news">
+    {{/* {{ range where .Pages.ByPublishDate "Date.Unix" "lt" now.Unix }} */}}
+    {{ $paginator := .Paginate (where .Pages.ByPublishDate "Date.Unix" "lt" now.Unix) 4 }}
+
+    {{ range $paginator.Pages }}
+    <div>
+      <a class="font-125" href="{{ .Permalink }}">{{ .Title }}</a>
+      <span>{{ .Content }}</span>
+      {{ partial "news-date-and-tags.html" . }}
+    </div>
+    {{ end }}
+    {{ template "_internal/pagination.html" . }}
+    </div>
+  </div>
+  <div class="tab-pane fade" id="events" role="tabpanel" aria-labelledby="profile-tab">
+    <h2>Upcoming Events 2</h2>
+    <div class="list-upcoming-events-def">
+
+    {{ range where .Site.Pages "Section" "events"  }}
+      {{ range where .Pages "Date.Unix" "gt" now.Unix  }}
+      {{/* $evt_paginator := .Paginate (where .Pages.ByPublishDate "Date.Unix" "gt" now.Unix) 4 */}}
+    {{/* range $evt_paginator.Pages */}}
+      {{ $dateTime := .PublishDate.Format "2006-01-02" }}
+      {{ $dateFormat := .Site.Params.dateFormat | default "Jan 2, 2006" }}
+    <div>
+      <time datetime="{{ $dateTime }}">{{ .PublishDate.Format $dateFormat }}</time>
+      <a class="font-125" href="{{ .Permalink }}">{{ .Title }}</a>
+      <p>{{ .Content }}</p>
+      {{ partial "news-date-and-tags.html" . }}
+    </div>
+      {{ end }}
+    {{ end }}
+    </div>
+
+  </div>
 </div>
-{{ end }}
-</div>
+
+
 
 <!-- <h2>Upcoming Events</h2>
 <div class="list-upcoming-events">
@@ -24,20 +63,6 @@
 {{ end }}
 </div> -->
 
-<h2>Upcoming Events 2</h2>
-<div class="list-upcoming-events-def">
-{{ range where .Site.Pages "Section" "events"  }}
-  {{ range where .Pages "Date.Unix" "gt" now.Unix  }}
-  {{ $dateTime := .PublishDate.Format "2006-01-02" }}
-  {{ $dateFormat := .Site.Params.dateFormat | default "Jan 2, 2006" }}
-<div>
-  <time datetime="{{ $dateTime }}">{{ .PublishDate.Format $dateFormat }}</time>
-  <a class="font-125" href="{{ .Permalink }}">{{ .Title }}</a>
-  <p>{{ .Content }}</p>
-  {{ partial "news-date-and-tags.html" . }}
-</div>
-  {{ end }}
-{{ end }}
-</div>
+
 
 {{ end }}
