--- a/themes/vanilla-bootstrap-hugo-theme/layouts/partials/footer.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/partials/footer.html
@@ -28,10 +28,18 @@
     <div class="row social-and-copy">
       <div class="col-sm-12 col-md-4">
         <!-- Social icons -->
-        <a class="social-icon" href=""><i class="fab fa-facebook-f"></i></a>
-        <a class="social-icon" href=""><i class="fab fa-twitter"></i></a>
-        <a class="social-icon" href=""><i class="fab fa-linkedin-in"></i></a>
-        <a class="social-icon" href=""><i class="fab fa-instagram"></i></a>
+        {{ if .Site.Data.social.facebook_link }}
+          <a class="social-icon" href="{{ .Site.Data.social.facebook_link }}" target="_blank" aria-haspopup="true"><i class="fab fa-facebook-f"></i></a>
+        {{ end }}
+        {{ if .Site.Data.social.twitter_via }}
+          <a class="social-icon" href="https://www.twitter.com/{{ strings.TrimPrefix "@" .Site.Data.social.twitter_via }}"><i class="fab fa-twitter" target="_blank" aria-haspopup="true"></i></a>
+        {{ end }}
+        {{ if .Site.Data.social.linkedin_link }}
+          <a class="social-icon" href="{{ .Site.Data.social.linkedin_link }}"><i class="fab fa-linkedin-in" target="_blank" aria-haspopup="true"></i></a>
+        {{ end }}
+        {{ if .Site.Data.social.instagram_link }}
+          <a class="social-icon" href="{{ .Site.Data.social.instagram_link }}"><i class="fab fa-instagram" target="_blank" aria-haspopup="true"></i></a>
+        {{ end }}
       </div>
       <div class="col-sm-12 col-md-4 copy">
         &copy; 2018 Dignity + Debt. All rights reserved.
