--- a/themes/vanilla-bootstrap-hugo-theme/layouts/index.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/index.html
@@ -91,7 +91,7 @@
 </div>
 
 <div class="row sponsors flex-parent">
-  <h3 class="" tabindex="0">Collaboration with</h3>
+  <h3 class="" tabindex="0">In collaboration with</h3>
   <div class="w-100"></div>
   <div class="flex-parent">
     <div class="flex-child org-tile">
@@ -107,6 +107,11 @@
     <div class="flex-child org-tile">
       <a href="" target="_blank" aria-haspopup>
         <img class="" src="{{ "images/ssrc_logo.png" | absURL }}" width="175" height="57" alt="Social Science Research Council logo">
+      </a>
+    </div>
+    <div class="flex-child org-tile">
+      <a href="" target="_blank" aria-haspopup>
+        <img class="" src="{{ "images/vize-lab-150w.png" | absURL }}" height="70" alt="Social Science Research Council logo">
       </a>
     </div>
   </div>
