--- a/themes/vanilla-bootstrap-hugo-theme/layouts/partials/style.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/partials/style.html
@@ -10,6 +10,7 @@
         background-color: rgba(10, 61, 95, 0.5) !important;
         background-blend-mode: multiply;
         background-size: 1440px 720px;
+        background-position: 43% 0;
         background-repeat: no-repeat;
       }
     }
@@ -17,7 +18,7 @@
       background-image: url('{{ $img1440.RelPermalink }}');
       background-color: rgba(10, 61, 95, 0.5);
       background-blend-mode: multiply;
-      background-position: 0 -68px;
+      background-position: 43% -68px;
       background-size: 1440px 720px;
       background-repeat: no-repeat;
     }
