--- a/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
+++ b/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
@@ -208,19 +208,20 @@ button.navbar-toggler {
 .btn-custom {
     display: inline-block;
     // font-weight: 400;
-    font-family: $brandongrotesque-bold;
-    font-size: 18px;
-    color: $darkblue;
+    font-family: $brandongrotesque-reg;
+    font-size: 16px;
+    background-color: #B0224F;
+    color: #fff;
     text-align: center;
     white-space: nowrap;
     vertical-align: middle;
     user-select: none;
-    width: 167px;
-    height: 53px;
-    border: 4px solid $darkblue;
+    width: 176px;
+    height: 40px;
+    border: none;
     padding-top: 1rem;
     border-radius: 0;
-    box-shadow: 6px 6px 0 $darkblue;
+    // box-shadow: 6px 6px 0 $darkblue;
     // padding: 0.375rem 0.75rem;
     // font-size: 1rem;
     // line-height: 1.6;
@@ -229,9 +230,9 @@ button.navbar-toggler {
     //
     &:active,
     &:hover {
-      box-shadow: 5.5px 5.5px 0 $darkblue;
-      transform: translate(1px, 1px);
-      color: $darkblue;
+      box-shadow: 5.5px 5.5px 0 #5a052a;
+      // transform: translate(1px, 1px);
+      color: #fff;
     }
 }
 
@@ -397,6 +398,10 @@ h3.who-we-are,
 
   @include media-breakpoint-up(md) {
     justify-content: flex-start;
+  }
+  @include media-breakpoint-up(sm) {
+    max-width: 960px;
+    margin: auto;
   }
 
   img.flex-child {
@@ -594,6 +599,30 @@ h3.who-we-are,
     margin-bottom: 7.2rem;
   }
 }
+
+// News blocks one column
+
+.news-one-col {
+  &.flex-parent {
+
+  }
+  .home-news-item-one {
+    height: 200px;
+    width: 600px;
+    background-color: white;
+  }
+  .flex-child {
+    display: flex;
+  }
+  .event-tile {
+    background-color: white;
+    margin-right: 16px;
+    margin-left: 16px;
+    margin-bottom: 3.2rem;
+    width: unset !important;
+    height: unset;
+  }
+}  
 
 // Sponsors panel
 .row.sponsors {
