--- a/themes/vanilla-bootstrap-hugo-theme/layouts/index.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/index.html
@@ -26,7 +26,7 @@
     </div>
 </div>
 
-<div class="row news-banner ">
+<!--<div class="row news-banner ">
   <div class="flex-parent col col-md-7 col-sm-10">
       {{ $img := strings.TrimPrefix "/uploads/" .Page.Params.who_we_are_image }}
       {{ with $.Site.GetPage "page" "uploads/_index.md" }}
@@ -41,7 +41,7 @@
       </div>
       <a href="{{ .Page.Params.news_banner_link }}" class="flex-child arrow" aria-label="Go to News" tabindex="0"></a>
     </div>
-</div>
+</div>-->
 
 <div class="row biglinks">
   <div class="projects col">
@@ -62,7 +62,7 @@
   <div class="w-100"></div>
 
   {{ partial "one-col-news" . }}
-  
+
   <div class="w-100"></div>
   <!-- <div class="col"> -->
     <a class="btn btn-custom" href="{{ "/news/" | absURL }}" tabindex="0" aria-label="Go to About">VIEW ALL</a>
