Work on about page

--- a/themes/vanilla-bootstrap-hugo-theme/assets/scss/_bootstrap_variables.scss
+++ b/themes/vanilla-bootstrap-hugo-theme/assets/scss/_bootstrap_variables.scss
@@ -42,6 +42,10 @@ $darkblue: #0A3D5F;
 $primary: #1c3ed3;
 $secondary: #43454d;
 
+$dnd-navy: #003E62;
+$dnd-darkgreen: #1C6F81;
+$dnd-aqua: #C9E9EA;
+
 // Links
 $link-color: $white; // $primary;
 $link-decoration: none;
