--- a/themes/vanilla-bootstrap-hugo-theme/layouts/section/about.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/section/about.html
@@ -33,7 +33,7 @@
           {{ end }}
         {{ end }}
       </div>
-      <div class="col descr col-7 col-lg-7 offset-lg-0 col-md-7 offset-md-0 col-sm-10 offset-sm-1">
+      <div class="descr col-lg-7 offset-lg-0 col-md-7 offset-md-0 col-sm-10 offset-sm-1">
         <h3 tabindex="0">{{ .title }}</h3>
         <p tabindex="0">{{ .blurb }}</p>
       </div>
