--- a/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
+++ b/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
@@ -16,6 +16,11 @@ html {
   font-size: 62.5%; // sets sitewide font sizes based on user's font size in browser
 }
 
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 // Basic fonts and text styles
 h1 {
   font-family: $brandongrotesque-bold;
@@ -124,7 +129,7 @@ button.navbar-toggler {
 
 // Footer
 #footer {
-  background-color: #000;
+  background-color: #0A3D5F;
   font-family: $brandongrotesque-reg;
   .container {
     padding-left: 5.6rem;
@@ -400,8 +405,9 @@ h3.who-we-are,
     justify-content: flex-start;
   }
   @include media-breakpoint-up(sm) {
-    max-width: 960px;
+    max-width: 1004px;
     margin: auto;
+    padding: 0 2.4rem;
   }
 
   img.flex-child {
@@ -409,7 +415,7 @@ h3.who-we-are,
     flex: 0 0 2.96rem;
 
     @include media-breakpoint-up(sm) {
-      margin-right: 24px;
+      margin-right: 3.2rem;
     }
 
     @include media-breakpoint-up(lg) {
@@ -523,10 +529,16 @@ h3.who-we-are,
     }
 
     &.link-projects {
-      background-image: url("/images/projects_tile.png");
+      background-image: url("/images/projects-gateway-920w.jpg");
+      background-size: cover;
+      background-color: rgba(0, 0, 0, 0.5);
+      background-blend-mode: multiply;
     }
     &.link-meetings {
-      background-image: url("/images/meetings_tile.png");
+      background-image: url("/images/roundtable-1-460w.jpg");
+      background-size: cover;
+      background-color: rgba(0, 0, 0, 0.32);
+      background-blend-mode: multiply;
     }
     &:hover {
       text-decoration: none;
@@ -602,27 +614,79 @@ h3.who-we-are,
 
 // News blocks one column
 
-.news-one-col {
-  &.flex-parent {
+.row.news-blocks {
+  .news-one-col {
+    &.flex-parent {
+      max-width: 960px;
+      @include media-breakpoint-down(md) {
+        max-width: 460px;
+      }
+    }
+    .news-img-container {
+      width: 33%;
+      background-size: 160%;
+      background-repeat: no-repeat;
+      background-position: 57% 100%;
+      @media (max-width: 959px) {
+        background-size: cover;
+      }
+      @include media-breakpoint-down(md) {
+        width: 100%;
+        height: 240px;
+      }
+    }
+    .home-news-item-one {
+      height: auto;
+      width: 66%;
+      background-color: white;
+      margin-left: 3.2rem;
+      margin-right: 3.2rem;
+      @include media-breakpoint-down(md) {
+        max-width: 460px;
+        width: unset;
+      }
+    }
+    .flex-child {
+      display: flex;
+      @include media-breakpoint-down(md) {
+        flex-direction: column;
+      }
+    }
+    .event-tile {
+      background-color: white;
+      margin-right: 16px;
+      margin-left: 16px;
+      margin-bottom: 8rem;
+      width: unset !important;
+      height: auto;
+    }
+    a.link-news {
+      margin: 3.2rem 0 0.8rem 0;
+      cursor: pointer;
+      &:hover {
+        cursor: pointer;
+      }
+    }
 
-  }
-  .home-news-item-one {
-    height: 200px;
-    width: 600px;
-    background-color: white;
-  }
-  .flex-child {
-    display: flex;
-  }
-  .event-tile {
-    background-color: white;
-    margin-right: 16px;
-    margin-left: 16px;
-    margin-bottom: 3.2rem;
-    width: unset !important;
-    height: unset;
-  }
-}  
+    time {
+      display: block;
+      margin-left: 0;
+
+    }
+    p {
+      margin: 1.6rem 0 0 0;
+      font-size: 1.8rem;
+      line-height: 2.6rem;
+    }
+    a.btn-custom {
+      margin-bottom: 3.2rem;
+      @include media-breakpoint-down(md) {
+        margin: 3.2rem auto;
+        display: block;
+      }
+    }
+  }  
+}
 
 // Sponsors panel
 .row.sponsors {
