--- a/themes/vanilla-bootstrap-hugo-theme/layouts/index.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/index.html
@@ -65,7 +65,7 @@
 
   <div class="w-100"></div>
   <!-- <div class="col"> -->
-    <a class="btn btn-custom" href="{{ "/news/" | absURL }}" tabindex="0" aria-label="Go to About">VIEW ALL</a>
+    <!--<a class="btn btn-custom" href="{{ "/news/" | absURL }}" tabindex="0" aria-label="Go to About">VIEW ALL</a>-->
   <!-- </div> -->
 
 </div>
