--- a/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
+++ b/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
@@ -843,7 +843,25 @@ body.about {
     &.about-partners {
       margin-bottom: 9.6rem;
     }
+  } // end .row
+
+  .modal {
+    top: 25%;
+    &.fade .modal-dialog {
+      -moz-transition: none !important;
+      -o-transition: none !important;
+      -webkit-transition: none !important;
+      transition: none !important;
+
+      -moz-transform: none !important;
+      -ms-transform: none !important;
+      -o-transform: none !important;
+      -webkit-transform: none !important;
+      transform: none !important;
+    }
   }
+
+
 }
 
 
