--- a/themes/vanilla-bootstrap-hugo-theme/layouts/partials/style.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/partials/style.html
@@ -13,6 +13,10 @@
         background-position: 43% 0;
         background-repeat: no-repeat;
       }
+      .home nav {
+        background-color: rgba(255, 255, 255, 1) !important;
+        transition: background-color 150ms ease-in-out;
+      }
     }
     #home-jumbotron {
       background-image: url('{{ $img1440.RelPermalink }}');
