--- a/themes/vanilla-bootstrap-hugo-theme/layouts/index.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="w-100"></div>
     <div class="col">
-      <a class="btn btn-custom" href="{{ "/about/" | absURL }}" tabindex="0" aria-label="Go to About">LEARN MORE</a>
+      <a class="btn btn-custom" href="{{ "#" | absURL }}" tabindex="0" aria-label="Go to About">LEARN MORE</a>
     </div>
 </div>
 
