Projects list page and single pages

--- a/themes/vanilla-bootstrap-hugo-theme/assets/scss/_bootstrap_variables.scss
+++ b/themes/vanilla-bootstrap-hugo-theme/assets/scss/_bootstrap_variables.scss
@@ -46,6 +46,7 @@ $secondary: #43454d;
 $dnd-navy: #003E62;
 $dnd-darkgreen: #1C6F81;
 $dnd-aqua: #C9E9EA;
+$dnd-lightgray: #B5BEC4;
 
 // Links
 $link-color: $white; // $primary;
