--- a/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
+++ b/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
@@ -44,6 +44,15 @@ h3 {
   font-size: 2.4rem;
 }
 
+a {
+  text-decoration: underline;
+  color: $dnd-darkgreen;
+
+  &:hover {
+    color: darken($dnd-darkgreen, 15%);
+  }
+}
+
 // Page container
 .container.parent {
   padding-right: 0;
@@ -80,6 +89,7 @@ nav.navbar-light {
       padding-right: 2rem;
       padding-left: 2rem;
       padding-top: 3.4rem;
+      text-decoration: none;
 
       &.active,
       &:hover {
@@ -117,15 +127,49 @@ button.navbar-toggler {
     border: 0;
 }
 
-// .collapse.show {
-//     height: 180px !important;
-//
-//     .nav-link,
-//     .nav-link:hover,
-//     .nav-link.active {
-//       border-top: 0;
-//     }
-// }
+// Breadcrumbs
+.breadcrumb-parent {
+  margin-top: 3.6rem;
+
+  .breadcrumb {
+    font-family: $brandongrotesque-med;
+    font-size: 1.8rem;
+    color: $dnd-darkgreen;
+    text-decoration: none;
+    padding-left: 3.6rem;
+    padding-top: 0;
+
+    a,
+    .sep {
+      color: $dnd-lightgray;
+      text-decoration: none;
+    }
+
+    .sep {
+      margin-left: 1.2rem;
+      margin-right: 1.2rem;
+    }
+  }
+}
+
+// Breaker image for single content pages
+.row.breaker {
+  height: 270px;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 5.6rem 0;
+}
+
+// Float image
+img {
+  &.float-right {
+    margin-left: 3.2rem;
+  }
+  &.float-left {
+    margin-right: 3.2rem;
+  }
+}
 
 // Footer
 #footer {
@@ -226,6 +270,7 @@ button.navbar-toggler {
     border: none;
     padding-top: 1rem;
     border-radius: 0;
+    text-decoration: none;
     // box-shadow: 6px 6px 0 $darkblue;
     // padding: 0.375rem 0.75rem;
     // font-size: 1rem;
@@ -708,7 +753,6 @@ h3.who-we-are,
   }
 }
 
-//////
 ////// About
 body.about {
 
@@ -954,11 +998,111 @@ body.about {
       transform: none !important;
     }
   }
-
-
 }
 
+////// Projects
+// Projects section page
+body.type-projects.kind-section {
+  .row {
+    &.jumbotron {
+      height: 310px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      margin-bottom: 6.4rem;
+    }
 
+    h2,
+    .desc,
+    .morelink-parent {
+
+    }
+
+    h2 {
+      font-family: $brandongrotesque-bold;
+      font-size: 3.2rem;
+      color: $dnd-navy;
+      line-height: 4rem;
+      text-transform: uppercase;
+      &:after {
+        content: "";
+        display: block;
+        width: 4.8rem;
+        border-bottom: solid 8px $dnd-aqua;
+        margin: 2.4rem 0 3.6rem;
+      }
+    }
+
+    .desc {
+      font-family: $font-family-base;
+      font-size: 1.8rem;
+      color: $dnd-navy;
+      line-height: 2.6rem;
+    }
+
+    .morelink-parent {
+      margin-top: 4.2rem;
+      margin-bottom: 5.6rem;
+
+      &:after {
+        content: "";
+        display: block;
+        width: 100%;
+        border-bottom: solid 1px $dnd-aqua;
+        margin: 5.6rem 0 3.6rem;
+      }
+    }
+  }
+}
+// Single pages in section
+body.type-projects {
+  &.kind-page {
+    .row {
+      &.jumbotron {
+        height: 469px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin-bottom: 3.8rem;
+      }
+      h2 {
+        font-family: $brandongrotesque-bold;
+        font-size: 3.2rem;
+        color: $dnd-navy;
+        line-height: 4rem;
+        text-transform: uppercase;
+        // margin-left: 20rem;
+        margin-top: 8rem;
+        margin-bottom: 4.8rem;
+      }
+      &.content {
+        font-family: $font-family-base;
+        font-size: 1.8rem;
+        line-height: 2.6rem;
+        margin-bottom: 5.6rem;
+        color: $dnd-navy;
+
+        p {
+          margin-top: 1.8rem;
+          bottom: 1.8rem;
+        }
+        // Standardize headers added to content.
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+          font-family: $brandongrotesque-bold;
+          font-size: 2.8rem;
+          color: $dnd-navy;
+          line-height: 3.2rem;
+          text-transform: uppercase;
+          // margin-left: 20rem;
+          margin-top: 3.8rem;
+        }
+      }
+    }
+  }
+}
 
 ////// News
 ////// Events
