Add responsive fixes to homepage

--- a/themes/vanilla-bootstrap-hugo-theme/layouts/index.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/index.html
@@ -14,7 +14,7 @@
     {{ with $.Site.GetPage "page" "uploads/_index.md" }}
         {{ with .Resources.GetMatch $img }}
               {{$img400 := .Fill "296x243 Center"}}
-              <img class="flex-child" src="{{ $img400.RelPermalink }}" width="296" height="243" alt="Gathering of people talking">
+              <img class="flex-child" src="{{ .RelPermalink }}" width="" height="" alt="Gathering of people talking">
         {{ end }}
     {{ end }}
     <div class="flex-child text">
