--- a/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
+++ b/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
@@ -1104,5 +1104,25 @@ body.type-projects {
   }
 }
 
+////// Meetings
+// Meetings Section
+.kind-section.type-meetings {
+  .row {
+    &.hearfrom {
+      text-align: center;
+
+      iframe {
+        width: 460px;
+        height: 258px;
+      }
+
+      span.desc {
+
+      }
+    }
+  }
+}
+// Meetings Single (Program TBD)
+
 ////// News
 ////// Events
