--- a/themes/vanilla-bootstrap-hugo-theme/layouts/index.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="w-100"></div>
     <div class="col">
-      <a class="btn btn-custom" href="{{ "#" | absURL }}" tabindex="0" aria-label="Go to About">LEARN MORE</a>
+      <a class="btn btn-custom" href="{{ "/about" | absURL }}" tabindex="0" aria-label="Go to About">LEARN MORE</a>
     </div>
 </div>
 
@@ -45,12 +45,12 @@
 
 <div class="row biglinks">
   <div class="projects col">
-    <a href="{{ "#" | absURL }}" class="link-projects float-right" tabindex="0" aria-label="Go to Projects">
+    <a href="{{ "/projects" | absURL }}" class="link-projects float-right" tabindex="0" aria-label="Go to Projects">
       <span class="align-middle">PROJECTS</span>
     </a>
   </div>
   <div class="meetings col">
-    <a href="{{ "#" | absURL }}" class="link-meetings float-left" tabindex="0" aria-label="Go to Meetings">
+    <a href="{{ "/meetings" | absURL }}" class="link-meetings float-left" tabindex="0" aria-label="Go to Meetings">
       <span class="align-middle">MEETINGS</span>
     </a>
   </div>
