--- a/themes/vanilla-bootstrap-hugo-theme/layouts/partials/head.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/partials/head.html
@@ -81,6 +81,6 @@
   {{ if .IsHome }}
     {{ $title = .Site.Title }}
   {{ end }}
-  <title>{{ $title }}</title>
+  <title>{{ $title }} testing</title>
   {{ partial "style.html" . }}
 </head>
