--- a/themes/vanilla-bootstrap-hugo-theme/layouts/partials/style.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/partials/style.html
@@ -1,4 +1,8 @@
 <style>
+  /* testing */
+  body {
+    color: black;
+  }
 {{ $img := strings.TrimPrefix "/uploads/" .Page.Params.hero_image }}
 {{ with $.Site.GetPage "page" "uploads/_index.md" }}
   {{ with .Resources.GetMatch $img }}
@@ -14,41 +18,53 @@
         background-repeat: no-repeat;
       }
 
-      .home.scroll-top nav {
-        background-image: transparent; /* url('{{ $img1440.RelPermalink }}'); */
-        background-color: transparent !important;/* rgba(10, 61, 95, 0.3) !important;*/
-        /* background-blend-mode: multiply;
-        background-size: 1440px auto;
-        background-position: 43% 0;
-        background-repeat: no-repeat; */
-      }
-      .home.scroll-header nav {
-        /* background-image: url('{{ $img1440.RelPermalink }}');
-        background-color: rgba(10, 61, 95, 0.3) !important;
-        background-blend-mode: multiply;
-        background-size: 1440px auto;
-        background-position-x: 43%;
-        background-repeat: no-repeat; */
-      }
-      .home nav {
-        background-color: rgba(255, 255, 255, 1) !important;
-        transition: background-color 200ms ease-in-out;
-      }
     }
     #home-jumbotron {
       background-image: url('{{ $img1440.RelPermalink }}');
-      background-color: rgba(10, 61, 95, 0.3);
-      background-blend-mode: multiply;
-      background-position: 43% -68px;
-      background-size: 1440px auto;
-      background-repeat: no-repeat;
-    }
-    @media (max-width: 768px) {
-      #home-jumbotron {
-        background-position: 67% -40px;
-      }
     }
   {{ end }}
 {{ end }}
-
+@media (min-width: 769px) {
+  .home .container.parent {
+    background-color: rgba(10, 61, 95, 0.3) !important;
+    background-blend-mode: multiply;
+    background-size: 1440px auto;
+    background-position: 43% 0;
+    background-repeat: no-repeat;
+  }
+  .home.scroll-top nav {
+    background-image: transparent;
+    background-color: transparent !important;
+    box-shadow: none;
+  }
+  .home nav {
+    background-color: rgba(255, 255, 255, 1) !important;
+    -webkit-box-shadow: 0 0 transparent, 0 0 transparent, 0 5px 5px -4px rgba(0, 0, 0, 0.10);
+    -moz-box-shadow: 0 0 transparent, 0 0 transparent, 0 5px 5px -4px rgba(0, 0, 0, 0.10);
+    box-shadow: 0 0 transparent, 0 0 transparent, 0 5px 5px -4px rgba(0, 0, 0, 0.10);
+    transition: background-color 200ms ease-in-out;
+  }
+  .not-home.scroll-top nav {
+    box-shadow: none;
+  }
+  .not-home nav {
+    background-color: rgba(255, 255, 255, 1) !important;
+    -webkit-box-shadow: 0 0 transparent, 0 0 transparent, 0 5px 5px -4px rgba(0, 0, 0, 0.10);
+    -moz-box-shadow: 0 0 transparent, 0 0 transparent, 0 5px 5px -4px rgba(0, 0, 0, 0.10);
+    box-shadow: 0 0 transparent, 0 0 transparent, 0 5px 5px -4px rgba(0, 0, 0, 0.10);
+    transition: none;
+  }
+}
+#home-jumbotron {
+  background-color: rgba(10, 61, 95, 0.3);
+  background-blend-mode: multiply;
+  background-position: 43% -68px;
+  background-size: 1440px auto;
+  background-repeat: no-repeat;
+}
+@media (max-width: 768px) {
+  #home-jumbotron {
+    background-position: 67% -40px;
+  }
+}
 </style>
