--- a/themes/vanilla-bootstrap-hugo-theme/layouts/section/meetings.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/section/meetings.html
@@ -1,25 +1,22 @@
 {{ define "main" }}
 
 <div class="row news-banner staytuned">
-  <div class="flex-parent col col-md-7 col-sm-10">
-      <div class="flex-child text">
-        <h3 tabindex="0">Stay Tuned</h3>
-        <span tabindex="0">We are in the process of planning new meetings. Be sure to come back and visit us soon for new videos and updates.</span>
-      </div>
-    </div>
+  <div class="column col-lg-8 col-md-8 col-sm-10 offset-lg-2 offset-md-2 offset-sm-1">
+    <h3 tabindex="0">Stay Tuned</h3>
+    <span tabindex="0">We are in the process of planning new meetings. Be sure to come back and visit us soon for new videos and updates.</span>
+  </div>
 </div>
+
 
 <div class="row news-banner whydignity">
-  <div class="flex-parent col col-md-7 col-sm-10">
-      <div class="flex-child text">
-        <h3 tabindex="0">Why Dignity?</h3>
-        <span tabindex="0">Why are we talking about dignity when talking about debt? Autonomy and protection from abuse. Does debt necessarily erode a person’s autonomy as she decides who she is and to behave as is she has a sense of free will? And when debt result from exploitation and abuse? Can we re-imagine a world in which debt does not have to accompany indignity?</span>
-      </div>
-    </div>
+  <div class="column col-lg-8 col-md-8 col-sm-10 offset-lg-2 offset-md-2 offset-sm-1">
+    <h3 tabindex="0">Why Dignity?</h3>
+    <span tabindex="0">Why are we talking about dignity when talking about debt? Autonomy and protection from abuse. Does debt necessarily erode a person’s autonomy as she decides who she is and to behave as is she has a sense of free will? And when debt result from exploitation and abuse? Can we re-imagine a world in which debt does not have to accompany indignity?</span>
+  </div>
 </div>
 
-<div class="row whydignity">
-  <div class="col-sm-2 col-md-2 col-sm-12 offset-lg-2 offset-md-2 offset-sm-0">
+<div class="row the-roundtable">
+  <div class="col-lg-3 col-md-4 col-sm-10 offset-lg-1 offset-md-1 offset-sm-1 order-lg-0 order-md-0 img-parent">
     <div class="pic">
       {{ $img := strings.TrimPrefix "/uploads/" .Page.Params.roundtable_image }}
       {{ with $.Site.GetPage "page" "uploads/_index.md" }}
@@ -30,10 +27,10 @@
       {{ end }}
     </div>
     <div class="morelink-parent">
-      <button class="btn btn-custom btn-bio" tabindex="0" aria-label="Read bio" data-toggle="modal" data-target="#peopleBioModal">MORE INFO</button>
+      <a href="{{ "/meetings/2018-program/" | absURL }}" class="btn btn-custom" tabindex="0" aria-label="VIEW 2018 PROGRAM">VIEW 2018 PROGRAM</a>
     </div>
   </div>
-  <div class="col-sm-8 col-md-8 col-sm-12">
+  <div class="col-lg-7 col-md-6 col-sm-10 offset-lg-0 offset-md-0 offset-sm-1 ">
       <div class="text">
         <h3 tabindex="0">THE ROUNDTABLE</h3>
         <span tabindex="0"> {{ .Page.Params.the_roundtable }}</span>
@@ -42,17 +39,32 @@
 </div>
 
 <div class="row d-flex justify-content-center flex-wrap hearfrom">
-  <div class="col-lg-6 col-md-6 flex-fill">
-    <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/1449362/sp/144936200/embedIframeJs/uiconf_id/25624581/partner_id/1449362?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=1_kldwyw07&amp;flashvars[leadWithHTML5]=true&amp;flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;wid=1_ndomvidw" width="560" height="315" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0" title="Kaltura Player"></iframe>
+  <div class="col-lg-6 col-md-6 col-sm-12 flex-fill">
+    <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/1449362/sp/144936200/embedIframeJs/uiconf_id/25624581/partner_id/1449362?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=1_kldwyw07&amp;flashvars[leadWithHTML5]=true&amp;flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;wid=1_ndomvidw" width="560" height="315" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0" title="Kaltura Player" aria-labelledby="vid1desc" class="img-fluid" tabindex="0"></iframe>
+    <span id="vid1desc" class="desc" tabindex="0">Hear from the DDN Director, Frederick Wherry, Professor of Sociology at Princeton on the mission of the Network.</span>
   </div>
-  <div class="col-lg-6 col-md-6 flex-fill">
-    <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/1449362/sp/144936200/embedIframeJs/uiconf_id/25624581/partner_id/1449362?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=1_5zh066n3&amp;flashvars[leadWithHTML5]=true&amp;flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;wid=1_sw6d2hsd" width="560" height="315" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0" title="Kaltura Player"></iframe>
+  <div class="col-lg-6 col-md-6 col-sm-12 flex-fill">
+    <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/1449362/sp/144936200/embedIframeJs/uiconf_id/25624581/partner_id/1449362?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=1_5zh066n3&amp;flashvars[leadWithHTML5]=true&amp;flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;wid=1_sw6d2hsd" width="560" height="315" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0" title="Kaltura Player" aria-labelledby="vid2desc" class="img-fluid" tabindex="0"></iframe>
+    <span id="vid2desc" class="desc" tabindex="0">Hear from Alondra Nelson, president of the Social Science Research Council, on anticipatory social research, getting ahead of emerging demographic shifts and unexamined vectors of inequality.</span>
   </div>
-  <div class="col-lg-6 col-md-6 flex-fill">
-    <iframe aria-labelledby="" id="kaltura_player" src="https://cdnapisec.kaltura.com/p/1449362/sp/144936200/embedIframeJs/uiconf_id/25624581/partner_id/1449362?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=1_plegp1g1&amp;flashvars[leadWithHTML5]=true&amp;flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;wid=1_pnsqzbc9" width="560" height="315" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0" title="Kaltura Player"></iframe>
-    <span class="description" aria-label=""></span>
+  <div class="col-lg-6 col-md-6 col-sm-12 flex-fill">
+    <iframe aria-labelledby="" id="kaltura_player" src="https://cdnapisec.kaltura.com/p/1449362/sp/144936200/embedIframeJs/uiconf_id/25624581/partner_id/1449362?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=1_plegp1g1&amp;flashvars[leadWithHTML5]=true&amp;flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;wid=1_pnsqzbc9" width="560" height="315" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0" title="Kaltura Player" aria-labelledby="vid3desc" class="img-fluid" tabindex="0"></iframe>
+    <span id="vid3desc" class="desc" tabindex="0">Hear from Princeton University President, Christopher Eisgruber on why dignity and debt are strategic priorities for the university.</span>
   </div>
 </div>
 
+<div class="row news-banner about-roundtable">
+  <div class="column col-lg-8 col-md-8 col-sm-10 offset-lg-2 offset-md-2 offset-sm-1">
+    <h3 tabindex="0">THE DIGNITY ROUNDTABLE</h3>
+    <span tabindex="0">The program for the Dignity + Debt Network Roundtable at Princeton began with a "Dignity Roundtable" of panelists describing how dignity and respect appear as motivating values for people using credit and debt. With an economist, a cognitive psychologist, a sociologist, and two anthropologist in dialogue, they explored how people experience dignity and seek to affirm it when making decisions about debt. The panel began with the question of how the delivery of debt affects individuals’ understandings of themselves as autonomous, self-directed, and respected (like everyone else). The panelists placed these meanings of debt and dignity into natural and laboratory contexts where debt is experienced as dignity-enhancing or degradin</span>
+  </div>
+</div>
+
+<div class="row d-flex justify-content-center flex-wrap hearfrom">
+  <div class="col-lg-6 col-md-6 flex-fill">
+    <iframe aria-labelledby="" id="kaltura_player" src="https://cdnapisec.kaltura.com/p/1449362/sp/144936200/embedIframeJs/uiconf_id/25624581/partner_id/1449362?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=1_plegp1g1&amp;flashvars[leadWithHTML5]=true&amp;flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;wid=1_pnsqzbc9" width="560" height="315" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0" title="Kaltura Player" aria-labelledby="vid3desc" tabindex="0"></iframe>
+    <span id="vid3desc" class="desc" tabindex="0">Hear from Princeton University President, Christopher Eisgruber on why dignity and debt are strategic priorities for the university.</span>
+  </div>
+</div>
 
 {{ end }}
