Remove footer social links, add Princeton logo

--- a/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
+++ b/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
@@ -204,6 +204,9 @@ img {
       }
     }
   }
+  img.princeton-logo {
+    width: 192px;
+  }
   .social-and-copy {
     margin-top: 5.6rem;
     text-align: left;
