--- a/themes/vanilla-bootstrap-hugo-theme/layouts/partials/footer.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/partials/footer.html
@@ -27,6 +27,7 @@
     </div>
     <div class="row social-and-copy">
       <div class="col-sm-12 col-md-4">
+        <a href="https://www.princeton.edu/" target="_blank"><img class="princeton-logo" src="/images/Princeton_shield_white.svg" /></a>
         <!-- Social icons -->
         {{ if .Site.Data.social.facebook_link }}
           <a class="social-icon" href="{{ .Site.Data.social.facebook_link }}" target="_blank" aria-haspopup="true"><i class="fab fa-facebook-f"></i></a>
