Add padding to Princeton logo

--- a/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
+++ b/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
@@ -206,6 +206,10 @@ img {
   }
   img.princeton-logo {
     width: 192px;
+    margin-bottom: 2.4rem;
+    @include media-breakpoint-up(md) {
+      margin-bottom: 0;
+    }
   }
   .social-and-copy {
     margin-top: 5.6rem;
